Adiciona tags na response
